# StaticTaintAnalysis

./: .gdb_history  .gitignore  CMakeLists.txt  README.md  llvm-project-10.0.1  run.py
sample/sample/: intraprocedural.c  sample.c
script/: pass.cpp  pass.h
